Fixing header link alignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -182,7 +182,7 @@ summary {
 
   @at-root #{&}__link {
     display: inline-block;
-    padding: .2em;
+    padding: .2em .2em .2em 0;
     text-decoration: none;
   }
 }
@@ -347,10 +347,6 @@ summary {
         margin-right: 0;
         width: 100%;
       }
-    }
-
-    .logo__link {
-      margin-left: -.25em;
     }
   }
 
